# portfolio

./: .eslintrc.json  README.md  amp.d.ts  jest.config.js  next-env.d.ts  package-lock.json  package.json
__tests__/unit/: example.spec.js
components/: BrandIcon.tsx  Footer.tsx  Header.tsx  HybridImage.tsx  Layout.tsx
components/Homepage/: SectionFour.tsx  SectionOne.tsx  (+2 more)
json/: blog.json  resume.json
nextjs/: .gitignore  Cargo.toml  amp.d.ts  package-lock.json  package.json  tsconfig.json
nextjs/__tests__/cypress/integration/examples/: actions.spec.js  assertions.spec.js  connectors.spec.js  location.spec.js  misc.spec.js  network_requests.spec.js  querying.spec.js  spies_stubs_clocks.spec.js  traversal.spec.js  utilities.spec.js  viewport.spec.js  waiting.spec.js
nextjs/components/: BrandIcon.tsx  Footer.tsx  Header.tsx  Layout.tsx
nextjs/components/Homepage/: SectionThree.tsx
nextjs/data/resume/: index.json
nextjs/hooks/: useScroll.ts
nextjs/pages/: index.tsx
nextjs/pages/blog/: index.tsx
nextjs/pages/resume/: index.tsx
nextjs/pages/wasm/: form.tsx
nextjs/src/: form.rs  lib.rs
nextjs/styles/: global.tsx
nextjs/utils/: getStaticData.ts
nextjs/webassembly/: next_wasm.d.ts  next_wasm.js  next_wasm_bg.js  next_wasm_bg.wasm  next_wasm_bg.wasm.d.ts
nuxt/: nuxt.config.js  package-lock.json  package.json  vue-shim.d.ts
pages/: _app.tsx  index.tsx
sapper/: .eslintrc.json  .prettierrc  package-lock.json  package.json  rollup.config.js  tsconfig.json
styles/: global.tsx
vue/: .eslintrc.js  nuxt.config.js  package-lock.json  package.json
(+51 files in other folders)
